@@ -10,11 +10,14 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
+import ua.tqs.project.quickserve.dto.BaseOrderDTO;
 import ua.tqs.project.quickserve.entities.Address;
 import ua.tqs.project.quickserve.entities.Order;
+import ua.tqs.project.quickserve.dto.FullOrderDTO;
 import ua.tqs.project.quickserve.dto.OrderDTO;
 import ua.tqs.project.quickserve.entities.PickupMethod;
 import ua.tqs.project.quickserve.entities.Menu;
+import ua.tqs.project.quickserve.entities.Order;
 import ua.tqs.project.quickserve.entities.Restaurant;
 import ua.tqs.project.quickserve.entities.RoleEnum;
 import ua.tqs.project.quickserve.entities.State;
@@ -30,6 +33,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
@@ -41,13 +46,16 @@ class OrderServiceTest {
     protected static final Logger logger = LogManager.getLogger(OrderServiceTest.class);
 
     @Mock
+    private UserService userService;
+
+    @Mock
     private OrderRepository orderRepository;
 
     @Mock
     private OrderItemService orderItemService;
 
     @Mock
-    private ItemIngredientService itemIngredientService;
+    private RestaurantService restaurantService;
 
     @InjectMocks
     private OrderService orderService;
@@ -77,9 +85,9 @@ class OrderServiceTest {
 
         Mockito.when(orderRepository.findByStatus(Status.SCHEDULED)).thenReturn(Arrays.asList(order1, order2, order3));
 
-        Mockito.when(orderItemService.getOrderItemsByOrderId(order1.getId())).thenReturn(Arrays.asList());
-        Mockito.when(orderItemService.getOrderItemsByOrderId(order2.getId())).thenReturn(Arrays.asList());
-        Mockito.when(orderItemService.getOrderItemsByOrderId(order3.getId())).thenReturn(Arrays.asList());
+        Mockito.when(orderItemService.getOrderItemsByOrderId(order1.getId())).thenReturn(List.of());
+        Mockito.when(orderItemService.getOrderItemsByOrderId(order2.getId())).thenReturn(List.of());
+        Mockito.when(orderItemService.getOrderItemsByOrderId(order3.getId())).thenReturn(List.of());
     }
     
     @Test
@@ -140,6 +148,129 @@ class OrderServiceTest {
             
         orderService.deleteOrderById(orderId);
         Mockito.verify(orderRepository, times(1)).deleteById(orderId);
+    }
+
+    @Test
+    void getOrdersByStatus_ShouldReturnOrdersByStatus() {
+        Status status = Status.SCHEDULED;
+        List<Order> orders = List.of(new Order(), new Order()); // Mock orders
+        when(orderRepository.findByStatus(status)).thenReturn(orders);
+
+        List<Order> result = orderService.getOrdersByStatus(status);
+
+        verify(orderRepository, times(1)).findByStatus(status);
+        assertEquals(orders, result);
+    }
+
+    @Test
+    void getAllOrders_ShouldReturnAllOrders() {
+        List<Order> orders = List.of(new Order(), new Order()); // Mock orders
+        when(orderRepository.findAll()).thenReturn(orders);
+
+        List<Order> result = orderService.getAllOrders();
+
+        verify(orderRepository, times(1)).findAll();
+        assertEquals(orders, result);
+    }
+
+    @Test
+    void getAllOrdersByUserId_ShouldReturnOrdersByUserId() {
+        long userId = 1L;
+        List<Order> orders = List.of(new Order(), new Order()); // Mock orders
+        when(orderRepository.findByUserId(userId)).thenReturn(orders);
+
+        List<Order> result = orderService.getAllOrdersByUserId(userId);
+
+        verify(orderRepository, times(1)).findByUserId(userId);
+        assertEquals(orders, result);
+    }
+
+    @Test
+    void getOrderByIdIfUser_ShouldReturnOrderIfUserMatches() {
+        long userId = 1L;
+        long orderId = 1L;
+        User user = new User(); // Mock user
+        user.setId(userId);
+        Order order = new Order(); // Mock order
+        order.setUser(user);
+        when(orderRepository.findById(orderId)).thenReturn(Optional.of(order));
+
+        Optional<Order> result = orderService.getOrderByIdIfUser(userId, orderId);
+
+        verify(orderRepository, times(1)).findById(orderId);
+        assertTrue(result.isPresent());
+        assertEquals(order, result.get());
+    }
+
+    @Test
+    void getOrderByIdIfUser_ShouldReturnEmptyIfUserDoesNotMatch() {
+        long userId = 1L;
+        long orderId = 1L;
+        when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+
+        Optional<Order> result = orderService.getOrderByIdIfUser(userId, orderId);
+
+        verify(orderRepository, times(1)).findById(orderId);
+        assertFalse(result.isPresent());
+    }
+
+    @Test
+    void save_ShouldSaveOrder() {
+        Order order = new Order(); // Mock order
+        when(orderRepository.save(any(Order.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        Order savedOrder = orderService.save(order);
+
+        verify(orderRepository, times(1)).save(order);
+        assertEquals(order, savedOrder);
+    }
+
+    @Test
+    void getOrderById_ShouldReturnOrderById() {
+        long id = 1L;
+        Order order = new Order(); // Mock order
+        when(orderRepository.findById(id)).thenReturn(Optional.of(order));
+
+        Order result = orderService.getOrderById(id);
+
+        verify(orderRepository, times(1)).findById(id);
+        assertEquals(order, result);
+    }
+
+    @Test
+    void deleteOrderById_ShouldDeleteOrderById() {
+        long id = 1L;
+        doNothing().when(orderRepository).deleteById(id);
+
+        orderService.deleteOrderById(id);
+
+        verify(orderRepository, times(1)).deleteById(id);
+    }
+
+    @Test
+    void makeOrder_ShouldMakeOrder() {
+        // Prepare the FullOrderDTO with necessary data
+        FullOrderDTO fullOrderDTO = new FullOrderDTO();
+        Order expectedOrder = new Order();
+        User user = new User();
+        user.setId(1L);
+        expectedOrder.setUser(user);
+        Restaurant restaurant = new Restaurant();
+        restaurant.setId(1L);
+        expectedOrder.setRestaurant(restaurant);
+        BaseOrderDTO orderDTO = orderService.getOrderDTO(expectedOrder);
+        fullOrderDTO.setOrder(orderDTO);
+
+
+        when(orderRepository.save(any(Order.class))).thenReturn(expectedOrder);
+        when(userService.getUserById(anyLong())).thenReturn(user);
+        when(restaurantService.getRestaurantById(anyLong())).thenReturn(restaurant);
+
+        Order result = orderService.makeOrder(fullOrderDTO);
+
+        verify(orderRepository, times(1)).save(any(Order.class));
+
+        assertEquals(expectedOrder.getId(), result.getId());
     }
 
 }
